Add unit tests for face recognition order service methods